# parking_lot

./: .gitignore  Cargo.toml  create_tables.sql  parking_lot.sqlite
src/: lib.rs  main.rs
src/adapter/: actix_adapter.rs  axum_adapter.rs  mod.rs  parking_lot_adapter.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  parked_car.rs  parking_lot.rs
src/domain/repository/: mod.rs  parking_lot_repository.rs
src/domain/usecase/: enter_parking_lot.rs  get_parking_lot.rs  mod.rs
src/infra/: mod.rs
src/infra/http/: mod.rs
src/infra/http/framework/: actix.rs  axum.rs
src/infra/http/handler/: generic_handler.rs  get_parking_lot_handler.rs  mod.rs
src/infra/repository/: mod.rs  parking_lot_repository_in_memory.rs  parking_lot_repository_in_momory.rs  parking_lot_repository_sqlite.rs
tests/: main.rs
