[package]
name = "parking_lot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.4"
tokio = { version = "1.38.0", features = ["full"] }
rusqlite = "0.31.0"
actix-web = "4.6.0"

[dev-dependencies]
actix-rt = "2.0.0"
serde_json = "1.0.117"

# sqlx = { version = "0.7.4", features = ["sqlite"] }
